--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     },
     "dependencies": {
         "axios": "^0.27.2",
+        "banking": "^1.2.0",
         "cors": "^2.8.5",
         "express": "~4.16.1",
+        "express-fileupload": "^1.4.0",
         "mongodb-memory-server": "^8.7.2",
         "mongoose": "^6.4.6",
         "morgan": "^1.10.0",
@@ -23,6 +25,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/express-fileupload": "^1.4.1",
         "@types/jest": "^28.1.5",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/morgan": "^1.9.3",
