--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
         "cors": "^2.8.5",
         "express": "~4.16.1",
         "express-fileupload": "^1.4.0",
+        "express-jsdoc-swagger": "^1.8.0",
         "mongodb-memory-server": "^8.7.2",
         "mongoose": "^6.4.6",
-        "morgan": "^1.10.0",
-        "swagger-jsdoc": "^6.2.1",
-        "swagger-ui-express": "^4.4.0"
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -31,8 +30,6 @@
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.0.3",
         "@types/supertest": "^2.0.12",
-        "@types/swagger-jsdoc": "^6.0.1",
-        "@types/swagger-ui-express": "^4.1.3",
         "dotenv": "^16.0.1",
         "jest": "^28.1.3",
         "supertest": "^6.2.4",
